Adds team section

--- a/views/home.erb
+++ b/views/home.erb
@@ -167,6 +167,7 @@
     <%= erb :"home/_what_we_do" %>
     <%= erb :"home/_call_to_action_processes" %>
     <%= erb :"home/_services" %>
+    <%= erb :"home/_team" %>
     <%= erb :"home/_contact" %>
     <%= erb :"home/_customers" %>
     <%= erb :"shared/_footer" %>
