--- a/views/home/_team.erb
+++ b/views/home/_team.erb
@@ -1,4 +1,4 @@
-<section class="px-4 md:px-14 py-14 md:py-20">
+<section id="team" class="px-4 md:px-14 py-14 md:py-20">
   <div class="mx-auto">
     <div class="text-2xl text-2xl md:text-3xl font-bold leading-tight mb-3 tracking-tight">
       Equipo
