--- a/views/home/_what_we_do.erb
+++ b/views/home/_what_we_do.erb
@@ -1,4 +1,4 @@
-<section class="px-4 md:px-14 py-14 md:py-20 border-t border-gray-200">
+<section id="about" class="px-4 md:px-14 py-14 md:py-20 border-t border-gray-200">
   <div class="mx-auto">
     <h2 class="text-2xl md:text-3xl font-bold leading-tight mb-3 tracking-tight">
       ¿Qué hacemos?
