--- a/views/home/_team.erb
+++ b/views/home/_team.erb
@@ -3,10 +3,10 @@
     <div class="text-2xl text-2xl md:text-3xl font-bold leading-tight mb-3 tracking-tight">
       Equipo
     </div>
-    <div class="grid grid-cols-1 md:grid-cols-3 gap-10">
+    <div class="grid grid-cols-1 md:grid-cols-4 gap-10">
       <!-- Team Member 1 -->
       <div class="bg-white rounded-lg shadow-md flex flex-col items-center p-6">
-        <img alt="Mayra Rodríguez" class="w-full h-56 object-cover rounded-md mb-4" src="/team/mayra.jpeg" />
+        <img alt="Mayra Rodríguez" class="w-full h-56 object-cover rounded-md mb-4" src="/team/mayra_bw.jpeg" />
         <div class="text-xl font-bold mb-1 text-center">Mayra Rodríguez</div>
         <div class="text-gray-500 text-center mb-2">Fundadora y desarrolladora de software</div>
         <div class="text-gray-700 text-sm text-center">
@@ -15,11 +15,29 @@
       </div>
       <!-- Team Member 2 -->
       <div class="bg-white rounded-lg shadow-md flex flex-col items-center p-6">
-        <img alt="Manuel Ortega" class="w-full h-56 object-cover rounded-md mb-4" src="/team/manuel.jpg" />
+        <img alt="Manuel Ortega" class="w-full h-56 object-cover rounded-md mb-4" src="/team/manuel_bw.png" />
         <div class="text-xl font-bold mb-1 text-center">Manuel Ortega</div>
         <div class="text-gray-500 text-center mb-2">Fundador y experto en Event Modeling y Event Sourcing</div>
         <div class="text-gray-700 text-sm text-center">
           Manuel Ortega es un profesional del desarrollo de software con más de 15 años de experiencia tejiendo puntes entre los equipos de producto e ingeniería. Con un conocimiento profundo de OOP y DDD, ahora su enfoque está en el Event Modeling y el Event Sourcing como enfoques para diseñar sistemas más transparentes y resilientes. Actualmente está liderando el desarrollo de una Event Store de código abierto, compatible con DCB y basada en archivos, para facilitar el acercamiento al Event Sourcing.
+        </div>
+      </div>
+      <!-- Team Member 3 -->
+      <div class="bg-white rounded-lg shadow-md flex flex-col items-center p-6">
+        <img alt="Adam Dymitruk" class="w-full h-56 object-cover rounded-md mb-4" src="/team/adymitruk.jpg" />
+        <div class="text-xl font-bold mb-1 text-center">Adam Dymitruk</div>
+        <div class="text-gray-500 text-center mb-2">Asesor, Fundador y CEO de Adaptech Group, Creador de Event Modeling</div>
+        <div class="text-gray-700 text-sm text-center">
+          Adam Dymitruk es el CEO de Adaptech Group y el creador de Event Modeling. Con más de tres décadas de experiencia en desarrollo y arquitectura de software, Adam es un experto en sistemas orientados a eventos y Event Sourcing. Ha sido clave en el avance de estas metodologías, especialmente a través de su trabajo en Event Modeling, que ofrece un enfoque visual y colaborativo para el diseño de sistemas. Adam es conferencista habitual en eventos internacionales y ha contribuido de manera significativa a la evolución hacia un diseño e implementación de sistemas más responsables y eficientes en la industria del software.
+        </div>
+      </div>
+      <!-- Team Member 4 -->
+      <div class="bg-white rounded-lg shadow-md flex flex-col items-center p-6">
+        <img alt="Martin Dilger" class="w-full h-56 object-cover rounded-md mb-4" src="/team/mdilger.png" />
+        <div class="text-xl font-bold mb-1 text-center">Martin Dilger</div>
+        <div class="text-gray-500 text-center mb-2">Asesor, CEO de Nebulit GmbH, Autor de "Understanding Eventsourcing", Experto en Event Sourcing</div>
+        <div class="text-gray-700 text-sm text-center">
+          Martin Dilger es el CEO de Nebulit GmbH. Trabaja como experto en Event Modeling y brinda apoyo a sus clientes en la planificación e implementación de sistemas basados en eventos mediante Event Modeling, Event Sourcing y Axon. Ha trabajado como arquitecto de TI y consultor en diversas industrias durante más de 15 años. Es autor del libro "Understanding Eventsourcing" y es experto en el diseño de sistemas complejos utilizando Event Modeling y Event Sourcing. Martin imparte regularmente formaciones y talleres con equipos, compartiendo sus conocimientos.
         </div>
       </div>
     </div>
