Updates landing page copies

--- a/views/home/_header.erb
+++ b/views/home/_header.erb
@@ -1,11 +1,13 @@
 <div class="min-h-screen flex flex-col">
   <header id="main-header" class="whiteboard-bg px-4 md:px-8 pt-4 pb-2 flex justify-between items-center fixed top-0 left-0 w-screen z-10 h-14 transition-all duration-300">
-    <div class="flex items-center">
-      <img id="main-logo" src="isologo-gazpacho.png" alt="Logo" class="h-10 w-10 mr-2 transition-all duration-300" />
-      <span class="logo-font tracking-tight text-[1.5rem] lg:text-[2rem]">
-        gazpacho dev
-      </span>
-    </div>
+    <a href="/">
+      <div class="flex items-center">
+        <img id="main-logo" src="isologo-gazpacho.png" alt="Logo" class="h-10 w-10 mr-2 transition-all duration-300" />
+        <span class="logo-font tracking-tight text-[1.5rem] lg:text-[2rem]">
+          gazpacho dev
+        </span>
+      </div>
+    </a>
     <div class="flex items-center">
       <div class="hidden lg:flex lg:gap-x-12">
         <a href="#about" class="text-sm/6 font-semibold text-gray-900">Nosotros</a>
@@ -15,7 +17,7 @@
       </div>
       <div class="flex lg:hidden">
         <button id="open-mobile-menu" type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
-          <span class="sr-only">Open main menu</span>
+          <span class="sr-only">Abrir menú principal</span>
           <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
           </svg>
@@ -28,11 +30,11 @@
       <div class="relative z-50">
         <div class="flex items-center justify-between">
           <a href="#" class="-m-1.5 p-1.5">
-            <span class="sr-only">Your Company</span>
+            <span class="sr-only">Gazpacho Dev</span>
             <img class="h-10 w-auto" src="isologo-gazpacho.png" alt="" />
           </a>
           <button id="close-mobile-menu" type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
-            <span class="sr-only">Close menu</span>
+            <span class="sr-only">Cerrar menú</span>
             <svg class="size-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true" data-slot="icon">
               <path stroke-linecap="round" stroke-linejoin="round" d="M6 18 18 6M6 6l12 12" />
             </svg>
@@ -61,7 +63,7 @@
             Tecnología para la transformación digital y de negocio
           </h1>
           <p class="text-neutral-600 text-md md:text-xl text-justify pr-10">
-            Nos especializamos en ofrecer soluciones que optimizan los flujos de trabajo y mejoran los procesos empresariales, permitiendo que las organizaciones operen de manera más eficiente y eficaz.
+            Desarrollamos soluciones a medida que optimizan procesos y flujos de información, mejorando la eficiencia y la toma de decisiones.
           </p>
         </div>
       </div>
@@ -70,20 +72,20 @@
         <ul>
           <li>
             <a href="#">
-              <h2 class="logo-font font-bold text-sm">Business Insight</h2>
-              <p class="font-normal text-[1.2rem]" style="font-family: 'Reenie Beanie', cursive;">Powerful analytics and audit trails built in</p>
+              <h2 class="logo-font font-bold text-sm">Visión de Negocio</h2>
+              <p class="font-normal text-[1.2rem]" style="font-family: 'Reenie Beanie', cursive;">Analíticas potentes y trazabilidad integrada</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <h2 class="logo-font font-bold text-sm">Ready for Tomorrow</h2>
-              <p class="font-normal text-[1.2rem]" style="font-family: 'Reenie Beanie', cursive;">Easily add features & adapt to change</p>
+              <h2 class="logo-font font-bold text-sm">Preparados para el Futuro</h2>
+              <p class="font-normal text-[1.2rem]" style="font-family: 'Reenie Beanie', cursive;">Agrega funcionalidades fácilmente</p>
             </a>
           </li>
           <li>
             <a href="#">
-              <h2 class="logo-font font-bold text-sm">Cut Costs, Cut Rework</h2>
-              <p class="font-normal text-[1.2rem]" style="font-family: 'Reenie Beanie', cursive;">Shared vision eliminates costly mistakes</p>
+              <h2 class="logo-font font-bold text-sm">Reduce Costes y Correcciones</h2>
+              <p class="font-normal text-[1.2rem]" style="font-family: 'Reenie Beanie', cursive;">Una visión compartida elimina errores costosos</p>
             </a>
           </li>          
         </ul>
