--- a/views/home/_team.erb
+++ b/views/home/_team.erb
@@ -10,7 +10,7 @@
         <div class="text-xl font-bold mb-1 text-center">Mayra Rodríguez</div>
         <div class="text-gray-500 text-center mb-2">Fundadora y desarrolladora de software</div>
         <div class="text-gray-700 text-sm text-center">
-          Mayra Rodríguez es una desarrolladora de software con un enfoque en sistemas orientados a eventos y microservicios. Como desarrolladora de software en Gazpacho Dev, construye soluciones escalables y mantenibles para nuestros clientes.
+          Mayra Rodríguez es desarrolladora de software especializada en sistemas orientados a eventos. En Gazpacho Dev, lidera el desarrollo de soluciones escalables y mantenibles que ayudan a nuestros clientes a transformar sus procesos y alcanzar sus objetivos organizacionales.
         </div>
       </div>
       <!-- Team Member 2 -->
