--- a/views/home/_services.erb
+++ b/views/home/_services.erb
@@ -3,8 +3,8 @@
     <div class="text-2xl text-2xl md:text-3xl font-bold leading-tight mb-3 tracking-tight">
       Servicios
     </div>
-    <p class="text-gray-500 text-sm md:text-base mb-12">
-      Nuestro core de trabajo es la transformación digital y de negocio pero también podemos ofrecer servicios de consultoría y formación sobre nuestros metodos de trabajo (Event Modeling y Event Sourcing)
+    <p class="text-gray-500 text-sm md:text-lg mb-12">
+      Nuestro trabajo está enfocado en la transformación digital y de negocio, pero también ofrecemos consultoría y formación especializada en nuestras metodologías y herramientas.
     </p>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
       <div>
@@ -12,19 +12,19 @@
       </div>
       <div class="space-y-8">
         <div>
-          <h3 class="font-semibold mb-1">
+          <h3 class="text-lg font-semibold mb-1">
             Transformación digital y de negocio
           </h3>
-          <p class="text-sm text-gray-500 leading-relaxed">
-            Automatiza y mejora los procesos de tu organización y pon en marcha de forma rápida y confiable nuevos procesos y servicios.
+          <p class="text-md text-gray-500 leading-relaxed">
+          Automatiza, mejora y transforma los procesos de tu organización. También podemos ayudarte a implementar, de forma rápida y segura, nuevos procesos y servicios.
           </p>
         </div>
         <div>
           <h3 class="font-semibold mb-1">
             Consultoría y formación
           </h3>
-          <p class="text-sm text-gray-500 leading-relaxed">
-            We are at the forefront of modern e-commerce development. We've built many stores using your logo in the Shopify store template we've used for the past 6 years.
+          <p class="text-md text-gray-500 leading-relaxed">
+            Ofrecemos consultoría y formación especializada en Event Modeling y Event Sourcing.
           </p>
         </div>
       </div>
