Updates social networks' links

--- a/views/home/_contact.erb
+++ b/views/home/_contact.erb
@@ -27,9 +27,7 @@
       </div>
       <!-- Social Icons -->
       <div class="flex justify-center md:justify-start space-x-8 mt-2">
-        <a href="#" class="bg-[#006e00ff] text-white rounded-full w-14 h-14 flex items-center justify-center text-3xl hover:bg-[#669600ff] transition"><i class="fab fa-instagram"></i></a>
-        <a href="#" class="bg-[#006e00ff] text-white rounded-full w-14 h-14 flex items-center justify-center text-3xl hover:bg-[#669600ff] transition"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="bg-[#006e00ff] text-white rounded-full w-14 h-14 flex items-center justify-center text-3xl hover:bg-[#669600ff] transition"><i class="fab fa-linkedin-in"></i></a>
+        <a href="https://www.linkedin.com/company/gazpachodev" target="_blank" class="bg-[#006e00ff] text-white rounded-full w-14 h-14 flex items-center justify-center text-3xl hover:bg-[#669600ff] transition"><i class="fab fa-linkedin-in"></i></a>
       </div>
     </div>
   </div>
