--- a/views/home/_services.erb
+++ b/views/home/_services.erb
@@ -1,10 +1,10 @@
 <section id="services" class="px-4 md:px-14 py-14 md:py-20">
   <div class="mx-auto">
     <div class="text-2xl text-2xl md:text-3xl font-bold leading-tight mb-3 tracking-tight">
-      Servicios
+      <%= I18n.t('home.services.title') %>
     </div>
     <p class="text-gray-500 text-sm md:text-lg mb-12">
-      Nuestro trabajo está enfocado en la transformación digital y de negocio, pero también ofrecemos consultoría y formación especializada en nuestras metodologías y herramientas.
+      <%= I18n.t('home.services.description') %>
     </p>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-10">
       <div>
@@ -13,18 +13,18 @@
       <div class="space-y-8">
         <div>
           <h3 class="text-lg font-semibold mb-1">
-            Transformación digital y de negocio
+            <%= I18n.t('home.services.service1') %>
           </h3>
           <p class="text-md text-gray-500 leading-relaxed">
-          Automatiza, mejora y transforma los procesos de tu organización. También podemos ayudarte a implementar, de forma rápida y segura, nuevos procesos y servicios.
+            <%= I18n.t('home.services.service1_description') %>
           </p>
         </div>
         <div>
           <h3 class="font-semibold mb-1">
-            Consultoría y formación
+            <%= I18n.t('home.services.service2') %>
           </h3>
           <p class="text-md text-gray-500 leading-relaxed">
-            Ofrecemos consultoría y formación especializada en Event Modeling y Event Sourcing.
+            <%= I18n.t('home.services.service2_description') %>
           </p>
         </div>
       </div>
