--- a/views/home/_customers.erb
+++ b/views/home/_customers.erb
@@ -1,7 +1,7 @@
 <section class="bg-white px-4 md:px-14 py-14 md:py-20">
   <div class="mx-auto">
     <p class="text-2xl md:text-3xl font-bold leading-tight mb-10 tracking-tight text-left">
-      Nuestros clientes
+      <%= I18n.t('home.customers.title') %>
     </p>
     <div class="grid grid-cols-2 md:grid-cols-4 gap-y-16 gap-x-8 items-center justify-items-center">
       <a href="https://www.withhoist.com/" target="_blank"><img src="/customers/hoist.png" alt="Hoist" class="h-12 md:h-16 object-contain" /></a>
