--- a/views/shared/_footer.erb
+++ b/views/shared/_footer.erb
@@ -46,8 +46,8 @@
     <!-- Bottom Row: enreda logo, tagline, copyright -->
     <div class="flex flex-col items-center">
       <img src="/gazpacho-white.png" alt="enreda" class="h-20 mb-2" />
-      <div class="text-center text-base mb-4">tecnología para la transformación digital y de negocio</div>
-      <div class="text-center text-sm mt-2">Creative Commons, Algunos Derechos Reservados</div>
+      <div class="text-center text-base mb-4"><%= I18n.t('footer.slogan') %></div>
+      <div class="text-center text-sm mt-2"><%= I18n.t('footer.copyright') %></div>
     </div>
   </div>
 </footer>
