Add CTA in the estudio ia service

--- a/views/estudio_ia.erb
+++ b/views/estudio_ia.erb
@@ -92,6 +92,7 @@
     <%= erb :"estudio_ia/_header" %>
     <%= erb :"estudio_ia/_que" %>
     <%= erb :"estudio_ia/_como" %>
+    <%= erb :"estudio_ia/_cta_processes" %>
     <%= erb :"estudio_ia/_contacto" %>
     <%= erb :"estudio_ia/_footer" %>s
   </body>
