--- a/views/estudio_ia.erb
+++ b/views/estudio_ia.erb
@@ -94,6 +94,6 @@
     <%= erb :"estudio_ia/_como" %>
     <%= erb :"estudio_ia/_cta_processes" %>
     <%= erb :"estudio_ia/_contacto" %>
-    <%= erb :"estudio_ia/_footer" %>s
+    <%= erb :"estudio_ia/_footer" %>
   </body>
 </html>
